<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editFaj"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginStart="104dp"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/faktextview2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editKor"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginStart="104dp"
        android:inputType="numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/kortextview2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/crud"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnget"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btnupdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="@string/btndelete"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonGet"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/idtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="128dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/idtextview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nevtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:text="@string/nev"
        app:layout_constraintBaseline_toBaselineOf="@+id/id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nevtextview"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fajtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="24dp"
        android:text="@string/faj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idtextview" />

    <TextView
        android:id="@+id/faj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fajtextview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kortextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:text="@string/kor"
        app:layout_constraintBaseline_toBaselineOf="@+id/faj"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/kortextview"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="268dp"
        android:text="@string/crud2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nevtextview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="229dp"
        android:text="@string/nev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginStart="104dp"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/nevtextview2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/faktextview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/faj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nevtextview2" />

    <TextView
        android:id="@+id/kortextview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/kor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faktextview2" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btnsave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGetAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btngetall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>