<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/id"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="12dp"
            android:text="@string/faj"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp"
            android:text="@string/nev"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp"
            android:layout_marginBottom="12dp"
            android:text="@string/kor"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/animalId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/textview1"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/animalSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/animalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/animalAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            card_view:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>